--- a/pages/styles.css
+++ b/pages/styles.css
@@ -2,3 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes loading-dots {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-loading-dot:nth-child(1) {
+  animation: loading-dots 1s ease-in-out infinite;
+  animation-delay: 0s;
+}
+
+.animate-loading-dot:nth-child(2) {
+  animation: loading-dots 1s ease-in-out infinite;
+  animation-delay: 0.2s;
+}
+
+.animate-loading-dot:nth-child(3) {
+  animation: loading-dots 1s ease-in-out infinite;
+  animation-delay: 0.4s;
+}
+
+
