--- a/pages/styles.css
+++ b/pages/styles.css
@@ -74,6 +74,9 @@ input:focus-visible {
     scrollbar-color: rgb(22, 224, 107) black;
     scrollbar-width: thin;
 }
+svg{
+    overflow: visible;
+}
 *::-webkit-scrollbar-track {
     background-color: black;
 }
